--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -64,9 +64,6 @@ a:hover{
   main splash page
  ================*/
 .splash_page{
-  display: hidden;
-}
-.splash_page{
   height: calc(100vh - 72px);
   overflow: hidden;
   display: grid;
@@ -262,9 +259,9 @@ img{
 }
 .card img:hover{
   border: 1px solid white;
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(3,255,234);
-  -moz-box-shadow   : 0px 0px 15px 0px rgba(3,255,234);
-  box-shadow        : 0px 0px 15px 0px rgba(3,255,234);
+  -webkit-box-shadow: 0px 0px 15px 0px rgb(3,255,234);
+  -moz-box-shadow   : 0px 0px 15px 0px rgb(3,255,234);
+  box-shadow        : 0px 0px 15px 0px rgb(3,255,234);
 }
 .card figcaption{
   line-height: 25px;
