--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -174,7 +174,7 @@ a:hover{
 /*==============*/
 #page_container{
   padding-top: 30px;
-  width: 292px;
+  width: 290px;
   margin: auto;
 }
 
@@ -214,19 +214,19 @@ p em{
 .card_grid{
   padding: 30px 0 0;
   margin: auto;
-  width: 292px;
+  width: 290px;
   display: grid;
   column-gap: 40px;          /*using both with prefix and without since the former*/
   grid-column-gap: 40px;     /*is depricated and the latter not fully implemented */
   row-gap: 20px;
   grid-row-gap: 20px;
-  grid-template-columns: 292px;
+  grid-template-columns: 290px;
   grid-auto-rows: auto;
 }
 /*for non mobiles */
 @media only screen and (min-width: 620px){
   #page_container{
-    width: 624px;
+    width: 620px;
   }
   h1{
     font-size: 35px;
@@ -237,8 +237,8 @@ p em{
     text-align: center;
   }
   .card_grid{
-    width: 624px;
-    grid-template-columns: 292px 292px;
+    width: 620px;
+    grid-template-columns: 290px 290px;
   }
 }
 /*for massive screens */
@@ -250,15 +250,15 @@ p em{
     font-size: 50px;
   }
   .card_grid{
-    width: 956px;
-    grid-template-columns: 292px 292px 292px;
+    width: 950px;
+    grid-template-columns: 290px 290px 290px;
   }
 }
-img{
-  border: 1px solid #333;
+.card img{
+  outline: 1px solid #333;
 }
 .card img:hover{
-  border: 1px solid white;
+  outline: 1px solid white;
   -webkit-box-shadow: 0px 0px 15px 0px rgb(3,255,234);
   -moz-box-shadow   : 0px 0px 15px 0px rgb(3,255,234);
   box-shadow        : 0px 0px 15px 0px rgb(3,255,234);
